consolidate logic in root/build.gradle